# curious-ape

./: .air.toml  .dockerignore  .env  .gitignore  .semver.yaml  .sops.yaml  AGENTS.md  Cargo.toml  Containerfile  Dockerfile  Makefile  README.md  Taskfile.yaml  bobgen.yaml  configuration.yaml  constants.go  docker-compose.yaml  docker-compose.yml  go.mod  go.sum  habits.txt  notes.md  page.txt  run.sh  visual-style-todos.md
.sqlx/: query-6a5553288cd9aa125361b84a729812709564a47adcaf6c213cc521249006e7fd.json
api/: ape.yaml
assets/: efs.go
configuration/: base.yaml  production.yaml
deployment/: docker-compose.yaml
kube/: deployment.yaml  echo.yaml  migrate-down.yaml
magefiles/: database.go  magefile.go
migrations/: 000001_create_food_habits_table.down.sql  000001_create_food_habits_table.up.sql  000001_create_habits_table.down.sql  000001_create_habits_table.up.sql  000001_init.down.sql  000001_init.up.sql  000002_create_users_table.up.sql  000003_create_sleep_record_table.sql.down.sql  000003_create_sleep_record_table.sql.up.sql  000004_create_auth_tokens_table.sql.up.sql  000005_create_work_record_table.sql.down.sql  000005_create_work_record_table.sql.up.sql  000006_create_fitness_record_table.sql.down.sql  000006_create_fitness_record_table.sql.up.sql  20240213231332_create_habits_table.sql  efs.go
rest/: errors.go  headers.go  json.go  middleware-content.go  middleware-helper.go  middleware.go  response.go  rest.go
scripts/: audit.sh  bootstrap.sh  bootstrap_dev.sh  build-ui.sh  build.fish  build.sh  build_image.sh  ci.sh  ci_steps.sh  deploy.sh  (+19 more)
(+600 files in other folders)
