[package]
name = "ape"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Cosme <cosmedaniel8@gmail.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "curious_ape"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11"
serde = { version = "1", features = ["derive"]}
config = "0.13"

[dependencies.sqlx]
    version = "0.7"
    default-features = false
    features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
